--- a/planos.html
+++ b/planos.html
@@ -9,15 +9,37 @@
 <body>
     <div>
         <header>
-            <div class="container">
-        <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="academias.html">Academias</a></li>
-        <li><a href="planos.html">Planos</a></li>
-        <li><a href="ajuda.html">Ajuda e Suporte</a></li>
-        <li><a href="trabalhe.html">Trabalhe conosco</a></li>
-        <li><a href="aulas.html">Aulas gerais</a></li>
-        </ul>
-            </div>
+            <img class="logo" src="./img/logo.png" alt="logo">
+
+    <nav class="nav-header">
+
+        <div>
+
+            <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="academias.html">Academias</a></li>
+            <li><a href="planos.html">Planos</a></li>
+            <li><a href="ajuda.html">Ajuda e Suporte</a></li>
+            </ul>
+        </div>
+
+    </nav>
+
+    </header>
+
+
+
+
+    <footer>
+        <p>&copy; 2023 - Todos os direitos reservados</p>
+        <nav>
+            <ul>
+                <li><a href="#">Termos de uso</a></li>
+                <li><a href="#">Política de privacidade</a></li>
+                <li><a href="#">Sobre nós</a></li>
+                <li><a href="#">Contato</a></li>
+            </ul>
+        </nav>
+    </footer>
 </body>
 </html>
