--- a/ajuda.html
+++ b/ajuda.html
@@ -26,7 +26,49 @@
     </nav>
 
     </header>
-
+    <main>
+        <section class="help-section">
+            <h1 class="hum">Ajuda e Suporte</h1>
+            <p>Se você precisar de ajuda ou tem alguma dúvida, estamos aqui para ajudar!</p>
+            <ul class="help-list">
+                <li>
+                    <i class="fas fa-question-circle"></i>
+                    <h2>Perguntas Frequentes</h2>
+                    <p>Encontre respostas para as perguntas mais frequentes sobre nossa academia.</p>
+                    <a href="#" class="btn">Ver Perguntas Frequentes</a>
+                </li>
+                <li>
+                    <i class="fas fa-envelope"></i>
+                    <h2>Contato: </h2>
+                    <p>Envie-nos uma mensagem e nossa equipe de suporte irá responder em breve.</p>
+                    <a href="#" class="btn">tssparta@gmail.com</a>
+                </li>
+                <li>
+                    <i class="fas fa-phone"></i>
+                    <h2>Telefone: </h2>
+                    <p>Ligue para nossa central de atendimento e nossa equipe irá ajudar.</p>
+                    <a href="#" class="btn">(43) 9876-5432</a>
+                </li>
+            </ul>
+        </section>
+        <section class="faq-section">
+            <h1 class="perguntas">Perguntas Frequentes</h1>
+            <ul class="faq-list">
+                <li>
+                    <h2>Como faço para cancelar minha assinatura?</h2>
+                    <p>Para cancelar sua assinatura, basta entrar em contato conosco através do formulário de contato ou ligar para nossa central de atendimento.</p>
+                </li>
+                <li>
+                    <h2>Como faço para mudar meu plano de treino?</h2>
+                    <p>Para mudar seu plano de treino, basta entrar em contato conosco através do formulário de contato ou ligar para nossa central de atendimento.</p>
+                </li>
+                <li>
+                    <h2>Como faço para obter ajuda com meu treino?</h2>
+                    <p>Nossa equipe de treinadores está disponível para ajudar com qualquer dúvida ou problema que você tenha com seu treino.</p>
+                </li>
+            </ul>
+        </section>
+    </main>
 
 
 
