--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
                 <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="academias.html">Academias</a></li>
+                <li><a href="avaliacao.html">Avaliação Fisica</a></li>
                 <li><a href="planos.html">Planos</a></li>
                 <li><a href="ajuda.html">Ajuda e Suporte</a></li>
                 </ul>
@@ -55,7 +55,7 @@ para novos membros. Investir em sua saúde nunca foi tão fácil!</p>
        
 
     <footer>
-	<p>&copy; 2023 - Todos os direitos reservados</p>
+	<p>&copy; 2024 - Todos os direitos reservados</p>
 	<nav>
 		<ul>
 			<li><a href="#">Termos de uso</a></li>
