--- a/planos.html
+++ b/planos.html
@@ -17,7 +17,7 @@
 
             <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="academias.html">Academias</a></li>
+            <li><a href="avaliacao.html">Avaliação Fisica</a></li>
             <li><a href="planos.html">Planos</a></li>
             <li><a href="ajuda.html">Ajuda e Suporte</a></li>
             </ul>
@@ -27,11 +27,43 @@
 
     </header>
 
-
+        <div class="container">
+            <h1>Planos de academia</h1>
+            <div class="plan">
+                <h2>Plano basico</h2>
+                <ul>
+                    <li>Acesso às instalações da academia durante o horário comercial</li>
+                    <li>Uso ilimitado de equipamento cardiovascular</li>
+                    <li>Estacionamento gratuito</li>
+                </ul>
+                <p class="price">R$29.99/mês</p>
+                <button class="button"><a href="registro.html">Registre-se</a></button>
+            </div>
+            <div class="plan">
+                <h2>Plano Premium</h2>
+                <ul>
+                    <li>Tudo do Plano Basico</li>
+                    <li>Acesso às instalações da academia 24 horas por dia, 7 dias por semana</li>
+                    <li>Sessões de treinamento pessoal (1 por mês)</li>
+                </ul>
+                <p class="price">R$49.99/mês</p>
+                <button class="button"><a href="registro.html">Registre-se</a></button>
+            </div>
+            <div class="plan">
+                <h2>Plano Elite</h2>
+                <ul>
+                    <li>Tudo do Plano Premium</li>
+                    <li>Sessões de treinamento pessoal ilimitadas</li>
+                    <li>Passes gratuitos para convidados (5 por mês)</li>
+                </ul>
+                <p class="price">R$99.99/mês</p>
+                <button class="button"><a href="registro.html">Registre-se</button>
+            </div>
+        </div>
 
 
     <footer>
-        <p>&copy; 2023 - Todos os direitos reservados</p>
+        <p>&copy; 2024 - Todos os direitos reservados</p>
         <nav>
             <ul>
                 <li><a href="#">Termos de uso</a></li>
